--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
   flex-direction: column;
   max-width: 450px;
   height: 100vh;
+
   margin: 0 auto;
 
   border: 1px solid black;
@@ -35,6 +36,7 @@
 
   & .chat-content {
     flex: 1;
+    overflow-y: auto;
     padding: 10px 20px;
     display: flex;
     flex-direction: column;
